[gd_scene load_steps=15 format=2]

[ext_resource path="res://Combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://Combat/BackGrounds/plains.png" type="Texture" id=2]
[ext_resource path="res://Combat/Pointer.png" type="Texture" id=3]
[ext_resource path="res://Resources/Combat/SkillMenuBg.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/Folktale.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resources/black.png" type="Texture" id=6]
[ext_resource path="res://Combat/ActionSelector/ActionSelector.tscn" type="PackedScene" id=7]
[ext_resource path="res://Combat/CombatTeam.gd" type="Script" id=8]
[ext_resource path="res://Combat/Attack/AttackHandler.gd" type="Script" id=9]
[ext_resource path="res://ScreenShake.gd" type="Script" id=10]
[ext_resource path="res://Resources/Combat/Wanna Be Free.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font" ]

[sub_resource type="Animation" id=3]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Combat" type="Node" index="0"]

script = ExtResource( 1 )
Warning_scn = null

[node name="BackGround" type="TextureRect" parent="." index="0"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -2.0
margin_right = 1280.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Pointer" type="Node2D" parent="CanvasLayer" index="0"]

editor/display_folded = true
visible = false
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="CanvasLayer/Pointer" index="0"]

texture = ExtResource( 3 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Pointer" index="1"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
blend_times = [  ]

[node name="SkillDescription" type="Node2D" parent="CanvasLayer" index="1"]

editor/display_folded = true
visible = false
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/SkillDescription" index="0"]

modulate = Color( 1, 1, 1, 0.845294 )
scale = Vector2( 3, 1.5 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Description" type="Label" parent="CanvasLayer/SkillDescription" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 900.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Descpription"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="End" type="Node2D" parent="CanvasLayer" index="2"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
_sections_unfolded = [ "Visibility" ]

[node name="Black" type="TextureRect" parent="CanvasLayer/End" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/End" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/End" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/end = SubResource( 3 )
blend_times = [  ]

[node name="ActionSelector" parent="." index="2" instance=ExtResource( 7 )]

visible = false
z_index = 40
DEBUG = false

[node name="Allies" type="Node2D" parent="." index="3"]

editor/display_folded = true
scale = Vector2( -1, 1 )
z_index = 5
script = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Allies" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Enemies" type="Node2D" parent="." index="4"]

editor/display_folded = true
z_index = 5
script = ExtResource( 8 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Enemies" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="AttackHandler" type="Node" parent="." index="5"]

editor/display_folded = true
script = ExtResource( 9 )
DEBUG = false

[node name="Tween" type="Tween" parent="AttackHandler" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ScreenShake" type="Position2D" parent="AttackHandler" index="1"]

script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="AttackHandler/ScreenShake" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 11 )
volume_db = -18.92
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="changed_to" from="ActionSelector" to="." method="_on_ActionSelector_changed_to"]

[connection signal="selected" from="ActionSelector" to="." method="_on_ActionSelector_selected"]

[connection signal="all_acted" from="Allies" to="." method="_on_Allies_all_acted"]

[connection signal="all_acted" from="Enemies" to="." method="_on_Enemies_all_acted"]


